add api glitch fix

--- a/app/templates/committees.hbs
+++ b/app/templates/committees.hbs
@@ -4,7 +4,7 @@
 <li>{{committee.chamber}}</li>
 <li>{{committee.name}}</li>
 <li>{{committee.committee_id}}</li>
-<button {{action 'subCommitteesLink' committee}}>View Sub-Committees</button>
+<button class = "btn btn-warning" {{action 'subCommitteesLink' committee}}>View Sub-Committees</button>
 
 <hr />
 {{/each}}
