--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,7 @@
 {{lookup-form zipLookup="zipLookup"}}
 
-<button {{action 'committeesLink'}}>See List Of Senate Committess</button>
-<button {{action 'houseCommitteesLink'}}>See List Of House Committess</button>
-<button {{action 'allCommittees'}}>See List Of ALL Committess</button>
+<button class = "btn btn-info" {{action 'committeesLink'}}>See List Of Senate Committess</button>
+<button class = "btn btn-danger" {{action 'houseCommitteesLink'}}>See List Of House Committess</button>
+<button class = "btn btn-success" {{action 'allCommittees'}}>See List Of ALL Committess</button>
+<br>
+<button class = "btn btn-warning" {{action 'recentBills'}}>Recent Bills</button>
