--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,25 @@
-<h2 id="title">Welcome to Ember</h2>
+<nav class="navbar navbar-light bg-faded">
+  {{#link-to 'index'}}<a class="navbar-brand" href="#">Home</a>{{/link-to}}
+  <ul class="nav navbar-nav">
+    <li class="nav-item active">
+      <button class = "btn btn-info" {{action 'committeesLink'}}>See List Of Senate Committess</button>
+    </li>
+    <li class="nav-item">
+      <button class = "btn btn-danger" {{action 'houseCommitteesLink'}}>See List Of House Committess</button>
 
+    </li>
+    <li class="nav-item">
+      <button class = "btn btn-success" {{action 'allCommittees'}}>See List Of ALL Committess</button>
+    </li>
+    <li class="nav-item">
+      <button class = "btn btn-warning" {{action 'recentBills'}}>Recent Bills</button>
+    </li>
+
+    <li class="nav-item">
+      <button class = "btn btn-info" {{action 'legislativeInfo'}}>Legislative Info</button>
+    </li>
+
+  </ul>
+
+</nav>
 {{outlet}}
